# NetBricks

./: .dockerignore  .gitignore  .travis.yml  CNAME  Cargo.toml  LICENSE.md  Makefile  README.md  _config.yml  build.sh  docker.mk  examples.sh  index.html  params.json  rustfmt.toml
examples/acl-fw/: Cargo.toml
examples/acl-fw/src/: main.rs  nf.rs
examples/chain/: Cargo.toml
examples/chain/src/: main.rs
examples/collect-metrics/: Cargo.toml
examples/collect-metrics/src/: main.rs
examples/echo-reply/: Cargo.toml  check.sh
examples/echo-reply/data/: echo_reply.out  echo_request.pcap
examples/echo-reply/src/: main.rs
examples/embedded-scheduler/: Cargo.toml
examples/embedded-scheduler-dependency/: Cargo.toml
examples/embedded-scheduler-dependency/src/: main.rs
examples/embedded-scheduler/src/: main.rs
examples/ipv4or6/: Cargo.toml  check.sh
examples/ipv4or6/src/: main.rs
examples/lpm/: Cargo.toml
examples/lpm/src/: lpm.rs  main.rs
examples/macswap/: Cargo.toml  check.sh
examples/macswap/data/: expect.out
examples/macswap/src/: main.rs
examples/maglev/: Cargo.toml
examples/maglev/src/: main.rs  nf.rs
examples/mtu-too-big/: Cargo.toml  check.sh
examples/mtu-too-big/data/: expect_ipv6.out  in_bounds.pcap  over_bounds.pcap
examples/mtu-too-big/src/: main.rs
examples/nat-tcp-v4/: Cargo.toml
examples/nat-tcp-v4/src/: main.rs
examples/op-errors/: Cargo.toml  check.sh
examples/op-errors/data/: op_errors.out
examples/op-errors/src/: main.rs
examples/sctp/: Cargo.toml
examples/sctp/ctl/: controller.py
examples/sctp/src/: control.rs  main.rs
examples/signals/: Cargo.toml  check.sh
examples/signals/data/: expect.out
examples/signals/src/: main.rs
examples/srv6-sighup-flow/: Cargo.toml  check.sh
examples/srv6-sighup-flow/data/: expect_srv6.out  icmpv4.pcap  srv6_tcp.pcap
examples/srv6-sighup-flow/src/: main.rs  nf.rs
examples/tcp-reconstruction/: Cargo.toml  check.sh
examples/tcp-reconstruction/data/: expect.out
examples/tcp-reconstruction/src/: nf.rs
framework/: .travis.yml  Cargo.toml  EthPacket.cs  Interface.cs  Packet.cs  PacketBatch.cs  PmdPort.cs  build.rs  build.sh
framework/src/: lib.rs  runtime.rs
framework/src/allocators/: cache_aligned.rs  mod.rs
framework/src/common/: errors.rs  mod.rs
framework/src/config/: config_reader.rs  context.rs  flag_reader.rs  mod.rs
framework/src/control/: mod.rs  sctp.rs  tcp.rs
framework/src/control/linux/: epoll.rs
framework/src/headers/: icmp.rs  ip.rs  mac.rs  mod.rs  null_header.rs  tcp.rs  udp.rs  v6_ext.rs
framework/src/headers/ip/: mod.rs  v4.rs
framework/src/interface/: dpdk.rs  mod.rs  packet.rs  pmd.rs  port.rs
framework/src/interface/port/: cb_port.rs  mod.rs  phy_port.rs  virt_port.rs
framework/src/io/: interface.rs  mbuf.rs  mod.rs  pmd.rs
framework/src/io/packet_batch/: act.rs  apply_batch.rs  composition_batch.rs  context_batch.rs  deparsed_batch.rs  filter_batch.rs  internal_iface.rs  iterator.rs  macros.rs  map_batch.rs  merge_batch.rs  mod.rs  packet_batch.rs  parsed_batch.rs  receive_batch.rs  reset_parse.rs  send_batch.rs  transform_batch.rs
framework/src/native/: libnuma.rs  mbuf.rs  mod.rs  numa.h  zcsi.rs
framework/src/native/zcsi/: mbuf.rs  mod.rs  zcsi.rs
framework/src/native_include/: dpdk-headers.h  mod.rs
framework/src/new_operators/: filter_batch.rs  foreach_batch.rs  groupby_batch.rs  map_batch.rs  mod.rs  packet_batch.rs  queue_batch.rs  receive_batch.rs  send_batch.rs
framework/src/operators/: act.rs  add_metadata.rs  add_metadata_mut.rs  composition_batch.rs  context_batch.rs  deparsed_batch.rs  emit_batch.rs  filter_batch.rs  filtermap_batch.rs  foreach_batch.rs  group_by.rs  groupby_batch.rs  iterator.rs  macros.rs  map_batch.rs  map_results.rs  merge_batch.rs  mod.rs  packet_batch.rs  parsed_batch.rs  queue_batch.rs  receive_batch.rs  receive_queue_general.rs  reset_parse.rs  restore_header.rs  send_batch.rs  transform_batch.rs  transform_results.rs
framework/src/packet_batch/: act.rs  apply_batch.rs  composition_batch.rs  context_batch.rs  deparsed_batch.rs  filter_batch.rs  group_by.rs  iterator.rs  macros.rs  map_batch.rs  merge_batch.rs  mod.rs  packet_batch.rs  parsed_batch.rs  receive_batch.rs  receive_queue.rs  receive_queue_general.rs  reset_parse.rs  resize_payload.rs  send_batch.rs  transform_batch.rs
framework/src/packets/: buffer.rs  checksum.rs  ethernet.rs  mac.rs  mod.rs  raw.rs  tcp.rs  udp.rs
framework/src/packets/icmp/: mod.rs
framework/src/packets/ip/: mod.rs  v4.rs  v6.rs
framework/src/queues/: mod.rs  mpsc_mbuf_queue.rs
framework/src/scheduler/: config_reader.rs  context.rs  embedded_scheduler.rs  mod.rs  scheduler.rs  standalone_scheduler.rs
framework/src/shared_state/: directory.rs  mod.rs  shared_vec.rs
framework/src/state/: cp_flow_counter.rs  cp_mergeable.rs  dp_mergeable.rs  mergeable.rs  mod.rs  reordered_buffer.rs  ring_buffer.rs  tcp_window.rs
framework/src/state/reordered_buffer/: mod.rs  reordered_buffer.rs
framework/src/testing/: arbitrary.rs  mod.rs  packet.rs  strategy.rs
framework/src/tests/: mod.rs
framework/src/utils/: asm.rs  atom.rs  flow.rs  mod.rs  mpsc_mbuf_queue.rs  receivable_queues.rs  ring_buffer.rs  spsc_mbuf_queue.rs  test.rs
framework/tests/: address.rs  lib.rs  packets.rs  ring_buffer.rs  tcp_window.rs
netbricks-codegen/: Cargo.toml
netbricks-codegen/src/: lib.rs
test/acl-fw/: Cargo.toml
test/acl-fw/src/: main.rs  nf.rs
test/bessmod/: Cargo.toml
test/bessmod/src/: bessnb.rs  lib.rs  main.rs
test/delay-test/: Cargo.toml
test/delay-test/src/: main.rs  nf.rs
test/framework-test/: Cargo.toml
test/framework-test/src/: main.rs
test/recvtest/: Cargo.toml
test/recvtest/src/: main.rs
test/rustfmwktest/: Cargo.toml
test/rustfmwktest/src/: main.rs
test/sctp-test/: Cargo.toml
test/sctp-test/control-test/: Cargo.toml
test/sctp-test/src/: control.rs  main.rs  nf.rs
test/srv6-inject/: Cargo.toml  check.sh
test/srv6-inject/data/: expect_ipv6.out  expect_srv6.out
test/srv6-inject/src/: main.rs  nf.rs
(+531 files in other folders)
