[workspace]
members=["framework",
        "examples/echo-reply",
        "examples/ipv4or6",
        "examples/macswap",
        "examples/mtu-too-big",
        "examples/op-errors",
        "examples/srv6-sighup-flow",
        # "examples/maglev",
        # "examples/sctp-test",
        # "examples/tcp-reconstruction",
        "examples/chain",
        "examples/acl-fw",
        "examples/config",
        "examples/shutdown",
        "examples/embedded-scheduler",
        "examples/embedded-scheduler-dependency",
        "examples/nat-tcp-v4",
        "examples/lpm"
    ]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
