[workspace]
members = [
    "framework",
    "examples/acl-fw",
    "examples/chain",
    "examples/collect-metrics",
    "examples/echo-reply",
    "examples/embedded-scheduler",
    "examples/embedded-scheduler-dependency",
    "examples/ipv4or6",
    "examples/lpm",
    "examples/macswap",
    # "examples/maglev",
    "examples/mtu-too-big",
    "examples/nat-tcp-v4",
    "examples/op-errors",
    # "examples/sctp-test",
    "examples/signals",
    # "examples/tcp-reconstruction",
]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
