[package]
name = "netbricks"
version = "0.3.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "William of Ockham <williamofockham@gmail.com>"]
build = "build.rs"

[lib]
doctest = false

[dependencies]
clap = "2.33"
config = "0.9"
crossbeam = "0.6"
failure = "*"
fallible-iterator = "0.2"
fnv = "*"
lazy_static = "*"
libc = ">= 0.2.4"
log = { version = "0.4", features = ["std", "serde"] }
net2 = "*"
# NIX restricts us to just unix for now, we can fix this if someone cares at a later point.
nix = "*"
rayon = "1.0"
regex = "*"
rust-sctp = { git="https://github.com/netsys/rust-sctp", optional = true}
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
twox-hash = "*"

[features]
default = []
performance = []
sctp = ["rust-sctp"]

[dev-dependencies]
proptest = "0.8.3"

[build-dependencies]
# Use Bindgen to generate DPDK structures.
bindgen = "0.35.0"
