[package]
name = "netbricks"
version = "0.3.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>", "Aurojit Panda <apanda@cs.berkeley.edu>"]
description = "A network function framework written in Rust and using DPDK"
build = "build.rs"
license = "ISC"
repository = "https://github.com/williamofockham/NetBricks"
readme = "README.md"
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[lib]
doctest = false

[dependencies]
clap = "2.33"
config = "0.9"
crossbeam = "0.6"
failure = "0.1"
fallible-iterator = "0.2"
fnv = ">= 1.0"
hex = "0.3"
lazy_static = ">= 1.3"
libc = ">= 0.2"
log = { version = "0.4", features = ["std", "serde"] }
net2 = "0.2"
# NIX restricts us to just unix for now, we can fix this if someone cares at a later point.
nix = ">= 0.13"
proptest = { version = "0.9", optional = true }
rayon = "1.0"
regex = ">= 1.1"
rust-sctp = { git="https://github.com/netsys/rust-sctp", optional = true }
serde = ">= 1.0"
serde_derive = ">= 1.0"
tokio = "0.1"
tokio-signal = "0.2"
twox-hash = ">= 1.2"

[features]
default = []
performance = []
sctp = ["rust-sctp"]
test = ["proptest"]

[dev-dependencies]
proptest = "0.9"

[build-dependencies]
# Use Bindgen to generate DPDK structures.
bindgen = "0.49"
