[package]
name = "collect-metrics"
version = "0.1.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>"]
description = "Example: collecting metrics as timer task"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/collect-metrics"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
lazy_static = ">= 1.3"
netbricks = { path = "../../framework"}

[features]
default = []
print = []
