[package]
name = "embedded-scheduler-dependency"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "William of Ockham <williamofockham@gmail.com>"]

[dependencies]
netbricks = { path = "../../framework"}
time = ">=0.1.0"
getopts = "*"
rand = "0.3"
fnv = "*"

[features]
default = []
print = []
