[package]
name = "embedded-scheduler"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "William of Ockham <williamofockham@gmail.com>"]
description = "Example: embedded-scheduler works"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/embedded-scheduler"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
netbricks = { path = "../../framework"}

[features]
default = []
print = []
