[package]
name = "ipv4or6"
version = "0.1.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>"]
description = "Example: ipv4 and ipv6 packets"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/ipv4or6"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
colored = ">= 1.6"
netbricks = { path = "../../framework"}

[features]
default = []
print = []
