[package]
name = "lpm"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]

[dependencies]
netbricks = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*"
rand = "0.6"
fnv = "*"
colored = ">=1.6"
lazy_static = "*"

[features]
default = []
print = []
