[package]
name = "lpm"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "William of Ockham <Occam_Engineering@comcast.com>"]

[dependencies]
colored = ">=1.6"
fnv = "*"
lazy_static = "*"
netbricks = { path = "../../framework", features = ["performance"] }
rand = "0.6"

[features]
default = []
print = []
