[package]
name = "nat-tcp-v4"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "William of Ockham <williamofockham@gmail.com>"]
description = "Example: tcp ipv4 nat"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/nat-tcp-v4"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
fnv = ">= 1.0"
lazy_static = ">= 1.3"
netbricks = { path = "../../framework"}

[features]
default = []
print = []
