[package]
name = "sctp"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>", "William of Ockham <Occam_Engineering@comcast.com>"]
description = "Example: sctp w/ control server task"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/sctp"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
nix = ">=0.13"
rust-sctp = { git="https://github.com/netsys/rust-sctp" }
netbricks = { path = "../../framework", features = ["sctp"] }

[features]
default = []
print = []
