[package]
name = "tcp-payload"
version = "0.1.0"
authors = ["Steven H. Wang <wang.steven.h@gmail.com>"]
description = "Example: Tcp Reconstruction"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/tcp-reconstruction"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
time = ">= 0.1.0"
getopts = ">= 0.2.19"
rand = "0.6"
fnv = ">= 1.0.6"
twox-hash = ">= 1.2.0"
netbricks = { path = "../../framework" }

[features]
default = []
print = []
