[package]
name = "rustfmwktest"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]

[dependencies]
e2d2 = { path = "../../rust-framework" }
time = ">=0.1.0"

[features]
default = []
send = []
recv = []
print = []

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
