[package]
name = "zcsi-sctp"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]

[dependencies]
netbricks = { path = "../../framework", features = ["performance", "sctp"] }
time = ">=0.1.0"
getopts = "*"
rand = "0.3"
fnv = "*"
nix = "*"
# Figure out if we want this permanently or just for now.
rust-sctp = { git="https://github.com/netsys/rust-sctp" }

[features]
default = []
print = []
